fix icon and error message alignment issue

--- a/src/components/EditWarehouse/EditWarehouse.scss
+++ b/src/components/EditWarehouse/EditWarehouse.scss
@@ -52,7 +52,7 @@
       line-height: $p2-line-height;
 
       &--error {
-        @include flex-container($align: center);
+        @include flex-container($align: start);
         margin-top: 0.25rem;
         color: $Red;
       }
@@ -62,6 +62,7 @@
       height: 1rem;
       width: 1rem;
       margin-right: 0.25rem;
+      margin-top: inherit;
     }
     //* error notification style *//
 
